<resources
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">JustJava2</string>

    <!--Header Text for file [CHAR LIMIT = 20]-->
    <string name="order_button">ORDER</string>
    <string name="tv1">QUANTITY</string>
    <string name="initial_quantity_value">2</string>
    <string name="minus_button">-</string>
    <string name="plus_button">+</string>
    <string name="toppings">TOPPINGS</string>
    <string name="toppings1">WHIPPED CREAM</string>
    <string name="toppings2">CHOCOLATE</string>
    <string name="name">Name</string>
    <string name="thank_you">Thank you!!!!</string>
    <string name="total_quantity">Quantity:</string>
    <string name="whipped_cream">Add whipped cream? </string>
    <string name="chocolate">Add chocolate? </string>
    <string name="customer_name">Name:<xliff:g id = "name" example = "Amy">%s</xliff:g></string>
</resources>

